--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -209,6 +209,29 @@ li:hover {
   text-align: center;
 }
 
+.header-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.header-wrapper h2 {
+  display: inline-block;
+}
+
+.btn-modify {
+  margin-left: 20px;
+  border: none;
+  background-color: transparent;
+  font-family: 'Work Sans';
+}
+
+.btn-modify:hover {
+  cursor: pointer;
+  color: #b1663c;
+}
+
 .filter-menu {
   display: flex;
   justify-content: center;
@@ -338,4 +361,34 @@ footer nav ul {
   display: flex;
   justify-content: flex-end;
   margin: 2em;
+}
+
+/* Modale  */
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4); /* Fond noir semi-transparent */
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 50%; /* Adapté pour un affichage plus central et focalisé */
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
 }
